--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -5,7 +5,7 @@
  
 \begin{document}
  
-\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{3.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Norme di Progetto} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
  
@@ -84,6 +84,8 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
         \hline
         {RR-RPP} &Carollo Mirko \\
         \hline
+        {RPP-RQ} & Dissegna Stefano \\
+        \hline
         %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%
       \end{tabular}
       \caption{Lista Redattori} %INSERIRE DIDASCALIA - SE NECESSARIA -
@@ -108,6 +110,8 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
       {Pre-RR} & Bizzotto Piero \\
       \hline
       {RR-RPP} & Geremia Mirco \\
+      \hline
+      {RPP-RQ} & Geremia Mirco \\
       \hline
       %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
@@ -140,6 +144,8 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%
      \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
+       3.0 & 7$\slash$03$\slash$2009 Modifica per rilascio RQ & Dissegna Stefano \\ 
+      \hline
        2.1 & 9$\slash$02$\slash$2009 Aggiunte norme stile di codifica & Dissegna Stefano \\ 
       \hline
        2.0 & 23$\slash$01$\slash$2009 Verifica finale in preaparazione al rilascio per la RPP & Carollo Mirko        \\ 
