--- a/doc/SpecificaTecnica/SpecificaTecnica.tex
+++ b/doc/SpecificaTecnica/SpecificaTecnica.tex
@@ -5,7 +5,7 @@
 
 \begin{document}
 
-\renewcommand{\insertversion}{1.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
+\renewcommand{\insertversion}{2.0} %INSERIRE LA VERSIONE QUI DENTRO STILE x.x.xx
 \renewcommand{\TITOLODOC}{Specifica Tecnica} %INSERIRE IL TITOLO DEL DOCUMENTO DA FAR COMPARIRE A PIE PAGINA
 \renewcommand{\glosspath}{.\glossario} %INSERIRE PERCORSO RELATIVO
 
@@ -87,6 +87,9 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 										& Dissegna Stefano\\
 										& Rizzo Maurizio\\
 				\hline
+				\multirow{2}{*}{RPP-RQ} & Dissegna Stefano\\
+										& Rizzo Maurizio\\
+				\hline
 				%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%
 			\end{tabular}
 			\caption{Lista Redattori} %INSERIRE DIDASCALIA - SE NECESSARIA - 
@@ -109,6 +112,9 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 			\hline
 			%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%		
 			\multirow{1}{*}{RR-RPP} & Geremia Mirco\\
+									
+			\hline
+			\multirow{1}{*}{RPP-RQ} & Bizzotto Piero\\
 									
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -145,13 +151,13 @@ Il presente documento descrive le scelte tecniche, architetturali e tecnologiche
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 		 \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-                  1.8 & 13$\slash$02$\slash$2009 Aggiunta e descrizione classi di integrazione  & Rizzo Maurizio \\
+                  2.0 & 7$\slash$03$\slash$2009 Modifiche per rilascio RQ  & Dissegna Stefano \\
                                 \hline 
-                  1.7 & 7$\slash$02$\slash$2009 Descritto in dettaglio il ruolo dei punti in \textit{FreeLine} & Dissegna Stefano \\
+                  1.7 & 13$\slash$02$\slash$2009 Aggiunta e descrizione classi di integrazione & Rizzo Maurizio \\
+                                \hline 
+                  1.6 & 7$\slash$02$\slash$2009 Descritto in dettaglio il ruolo dei punti in \textit{FreeLine} & Dissegna Stefano \\
 				\hline
-                  1.6 & 6$\slash$02$\slash$2009 Aggiunta giustificazione scelta JavaScript & Dissegna Stefano \\
-				\hline
-                  1.5 & 6$\slash$02$\slash$2009 Descritto problema supporto diversi browser & Dissegna Stefano \\
+                  1.5 & 6$\slash$02$\slash$2009 Giustificato JavaScript, descritto problema supporto diversi browser  & Dissegna Stefano \\
 				\hline
                   1.4 & 5$\slash$02$\slash$2009 Maggiore dettaglio nella descrizione di alcune classi di ApplicationLogic & Dissegna Stefano \\
 				\hline
