--- a/doc/DefinizioneProdotto/DefinizioneProdotto.tex
+++ b/doc/DefinizioneProdotto/DefinizioneProdotto.tex
@@ -696,7 +696,7 @@ Legge e modifica \textit{Rotation}.
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\subsubsecindent]
 \item[-] \textit{RotationSetter(angle)} costruttore. Prende un \textit{Rotation} e setta il valore di un campo di un dialog statico implementato in HTML. Il campo contiene il valore attuale di \textit{angle}. Un evento viene collegato al pulsante di conferma \textit{Ruota} e se l'utente ha modificato l'angolo di rotazione, modifica \textit{angle} ed esegue un refresh. 
-
+\end{elencopuntato}
 
 \subsezione{FontSetter}
 \subsubsezione{Tipo, obiettivo e funzione del componente}
@@ -771,7 +771,7 @@ Il costruttore controlla se il browser supporta il metodo \textit{getImageData} 
 \end{elencopuntato}
 \paragrafo{Metodi pubblici:}
 \begin{elencopuntato}[\subsubsecindent]
-\item[-]  \textit{selectFigure(where)} permette di selezionare una figura contenente il punto passato come argomento, se tale figura esiste. Per maggiori dettagli si veda il diagramma di attivit\`a [TODO: inserire label diagramma].
+\item[-]  \textit{selectFigure(where)} permette di selezionare una figura contenente il punto passato come argomento, se tale figura esiste. Per maggiori dettagli si veda il diagramma di attivit\`a in figura 1.
 
 \begin{figure}[!ht]
 \centering
@@ -1103,7 +1103,7 @@ Creato dalla lettura di un file SVG oppure dall'interfaccia utente. Manipolato d
 \item[-] \textit{getFillColour()} ritorna \textit{{\_}fillColour}.
 \item[-] \textit{edgeNumber()} ritorna \textit{{\_}en}.
 \item[-] \textit{eachProperty(fn)} richiama \textit{eachProperty} di \textit{Figure} ed applica la funzione fn a \textit{{\_}fillColour} e a \textit{{\_en}}.
-\item[-] \textit{getPoints()} ritorna un'array di punti, considerando come origine \textit{BoundingRectangle.start()}, che rappresentano i vertici del poligono. Per maggiori dettagli si veda il diagramma di attivit\`a [TODO: ins. lebel].
+\item[-] \textit{getPoints()} ritorna un'array di punti, considerando come origine \textit{BoundingRectangle.start()}, che rappresentano i vertici del poligono. Per maggiori dettagli si veda il diagramma di attivit\`a in figura 2.
 
 \begin{figure}[!ht]
 \centering
