--- a/doc/NormeDiProgetto/NormeDiProgetto.tex
+++ b/doc/NormeDiProgetto/NormeDiProgetto.tex
@@ -80,9 +80,11 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
         %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%
         \hline
         %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%
-        {Pre-RR} &Geremia Mirco \\
+        {Pre-RR} & Geremia Mirco \\
         \hline
-        {RR-RPP} &Carollo Mirko \\
+        {RR-RPP} & Carollo Mirko \\
+        \hline
+        {RPP-RQ} & Dissegna Stefano\\
         \hline
         %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%
       \end{tabular}
@@ -91,6 +93,35 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
     \end{center}
   \end{table}
   
+\section*{\LARGE Verifica:}
+ 
+\begin{table}[!h]
+  \begin{center}
+    \begin{tabular}
+      {|c|c|}
+      \hline
+      %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%
+      \multicolumn{2}{|c|}{ \textbf{Verifica} } \\
+      \hline
+      \textbf{Fase} & \textbf{Verificatori} \\
+      %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%
+      \hline
+      %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%
+      {Pre-RR} & Bizzotto Piero \\
+      \hline
+      {RR-RPP} & Geremia Mirco \\
+      \hline
+      {RPP-RQ} & Dal Bosco Davide \\
+      \hline
+      %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+    \caption{Lista Verificatori} %INSERIRE DIDASCALIA - SE NECESSARIA -
+    \label{tabverifica}
+  \end{center}
+\end{table}
+\textbf{}  
+
+\newpage
 \section*{\LARGE Approvazione:}
  
 \begin{table}[!h]
@@ -105,9 +136,11 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
       %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%
       \hline
       %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%
-      {Pre-RR} & Bizzotto Piero \\
+      {Pre-RR} & Geremia Mirco \\
       \hline
-      {RR-RPP} & Geremia Mirco \\
+      {RR-RPP} & Bizzotto Piero\\
+      \hline
+      {RPP-RQ} & Cunico Marco\\
       \hline
       %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
@@ -140,6 +173,8 @@ Questo documento definisce le linee guida da seguire per la stesura della docume
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%
      \hline
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%
+	   3.0 & 07/03/2009 Verifica in preparazione la rilascio & Dissegna Stefano \\
+	   \hline 
        2.1 & 9$\slash$02$\slash$2009 Aggiunte norme stile di codifica & Dissegna Stefano \\ 
       \hline
        2.0 & 23$\slash$01$\slash$2009 Verifica finale in preaparazione al rilascio per la RPP & Carollo Mirko        \\ 
