--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -852,46 +852,46 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
 
 \newpage
 
- \subsezione{Tracciamento Requisiti - Aspettative}
+ \subsezione{Tracciamento Aspettative - Requisiti}
 \begin{table}[h]
 \begin{center}
      \begin{tabular}
            {@{\extracolsep{\fill}}|c|c|}
      \hline
 %%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-      \textbf{Requisiti} & \textbf{Aspettative} \\
+      \textbf{Aspettative} & \textbf{Requisiti} \\
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+     \hline
+     ACO-1 & RPO-1 RQO-9 \\
+     \hline
+     \multirow{2}{*}{ACO-2} & RFO-1 RFO-2 RFO-3 RFO-4 RFO-5 RFO-6 RFO-7 \\ RFO-8 RFO-11 RFO-12 RFO-13 RFO-14 \\
+     \hline
+     ACO-3  & RFO-8  RFO-9 RFO-10 \\
+     \hline
+     ACO-4  & RFO-15 RFO-16 \\
+     \hline
+     ACO-5  & RQO-1 RQO-7 RQO-8 RAO-1 RAO-2 RAO-6 \\
+     \hline
+     ACO-6  & RAO-3 \\
       \hline
-     RPO-1 RQO-9 & ACO-1 \\
+     ACO-7  & RIO-1 RIO-2 RIO-3 RIO-4 \\
      \hline
-     RFO-1 RFO-2 RFO-3 RFO-4 RFO-5 RFO-6 RFO-7 \\ RFO-8 RFO-11 RFO-12 RFO-13 RFO-14 & ACO-2  \\
+     ACO-8  & RQO-2 RQO-3 RQO-4 RQO-5 RQO-6 RAO-4 \\
      \hline
-     RFO-8  RFO-9 RFO-10 & ACO-3\\
+     ACF-1  & RFO-17 RFO-18 \\
      \hline
-     RFO-15 RFO-16 & ACO-4 \\
+     ACF-2 & RFD-1 RFD-2 RFF-1 RFF-2 \\
      \hline
-     RQO-1 RQO-7 RQO-8 RAO-1 RAO-2 RAO-6 & ACO-5 \\
+     ACF-3  & RAD-1 \\
      \hline
-     RAO-3 & ACO-6 \\
-      \hline
-     RIO-1 RIO-2 RIO-3 RIO-4 & ACO-7 \\
-     \hline
-     RQO-2 RQO-3 RQO-4 RQO-5 RQO-6 RAO-4 & ACO-8 \\
-     \hline
-     RFO-17 RFO-18 & ACF-1 \\
-     \hline
-     RFD-1 RFD-2 RFF-1 RFF-2 & ACF-2 \\
-     \hline
-     RAD-1 & ACF-3 \\
-     \hline
-     RAO-5 & ACD-1 \\
+     ACD-1 & RAO-5 \\
      
 %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
     \hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
-  \caption{Requisiti - Aspettative} %INSERIRE DIDASCALIA - SE NECESSARIA -
-  \label{tab:reqasp}
+  \caption{Aspettative - Requisiti} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:aspreq}
   \end{center}
 \end{table}
 
@@ -907,64 +907,126 @@ per ognuna \`e presente una classificazione per classe di importanza (obbligator
       \textbf{Requisiti} & \textbf{Fonte Associata} \\
 %%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
       \hline
-     RA0-1 & F01 \\
+     RFO-1 & F01 \\
      \hline
-     RFO-17 & F01  \\
+     RFO-2 & F01  \\
      \hline
-     RIO-2  RIO-4 & F01\\
+     RFO-3 & F01\\
      \hline
-     RIO-3 & F01 \\
+     RFO-4 & F01 \\
+     \hline
+     RFO-5 & F01 \\
+     \hline
+     RFO-6 & F01 \\
+      \hline
+     RFO-7 & F01 \\
+     \hline
+     RFO-8 & F01 \\
+     \hline
+     RFO-9 &  F01 \\
+     \hline
+     RFO-10 & F01 \\
+     \hline
+     RFO-11 & F01 \\
+     \hline
+     RFO-12 & F01 \\
      \hline
      RFO-13 & F01 \\
      \hline
      RFO-14 & F01 \\
-      \hline
-     RFO-15 RFO-16 & F01 \\
      \hline
-     RFO-1 RFO-2 RFO-9 & F01 \\
+     RFO-15 & F01 \\
      \hline
-     RFO-3 RFO-9 &  F01 \\
-     \hline
-     RFO-4 RFO-9 & F01 \\
-     \hline
-     RFO-5 RFO-9 & F01 \\
-     \hline
-     RFO-6 RFO-7 RFO-9 & F01 \\
-     \hline
-     RFO-9 & F01 \\
-     \hline
-     RFF-1 RFO-9 & F01 \\
-     \hline
-     RFD-1 RFO-9 & F01 \\
-     \hline
-     RFF-2 RFO-9 & F01 \\
+     RFO-16 & F01 \\
      \hline 
-     RFD-2 RFO-9 & F01 \\
-     \hline
-     RFO-7 & F01 \\
-     \hline
-     RFO-9 & F01 \\
-     \hline
-     RFO-8 & F01 \\
-     \hline
-     RFO-10 & F01 \\
+     RFO-17 & F01 \\
      \hline
      RFO-18 & F01 \\
      \hline
-     RFD-3 & F01 \\
+     RFD-1 & F01 \\
      \hline
-     RFF-3 & F02 \\
-     
-%%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
+     RFD-2 & F01 \\
+     %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
     \hline %%FINE RIGA
 %%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
     \end{tabular}
-  \caption{Requisiti - Fonte Associata} %INSERIRE DIDASCALIA - SE NECESSARIA -
-  \label{tab:reqfonte}
+  \caption{Requisiti - Fonte Associata prima parte} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:reqfonte1}
   \end{center}
 \end{table}
+     
+     
+     
+\newpage
 
-F01 = deriva dal capitolato    F02 = deriva dalla ditta 'WebShape'
+\begin{table}[h]
+\begin{center}
+     \begin{tabular}
+           {@{\extracolsep{\fill}}|c|c|}
+     \hline
+%%%%%%%%%%%%%%INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \textbf{Requisiti} & \textbf{Fonte Associata} \\
+%%%%%%%%%%%%%%FINE INTESTAZIONE COLONNE%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%     
+     \hline
+     RFD-3 & F02 \\
+     \hline
+     RFF-1 & F01 \\
+     \hline
+     RFF-2 & F01 \\
+     \hline
+     RFF-3 & F02 \\
+     \hline
+     RPO-1 & F02 \\
+     \hline
+     RQO-1 & F01 \\
+     \hline
+     RQO-2 & F02 \\
+     \hline
+     RQO-3 & F02 \\
+     \hline
+     RQO-4 & F01 \\
+     \hline
+     RQO-5 & F01 \\
+     \hline
+     RQO-6 & F01 \\
+     \hline
+     RQO-7 & F01 \\
+     \hline
+     RQO-8 & F01 \\
+     \hline
+     RQO-9 & F02 \\
+     \hline
+     RIO-1 & F01 \\
+     \hline
+     RIO-2 & F01 \\
+     \hline
+     RIO-3 & F01 \\
+     \hline
+     RIO-4 & F01 \\
+     \hline
+     RAO-1 & F01 \\
+     \hline
+     RAO-2 & F01 \\
+     \hline
+     RAO-3 & F01 \\
+     \hline
+     RAO-4 & F01 \\
+     \hline
+     RAO-5 & F01 \\
+     \hline
+     RAO-6 & F01 \\
+     \hline
+     RAD-1 & F01 \\
+     %%%%%%%%%%% PARTE DA MODIFICARE %%%%%%%%%%%%%%%%
+    \hline %%FINE RIGA
+%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \caption{Requisiti - Fonte Associata seconda parte} %INSERIRE DIDASCALIA - SE NECESSARIA -
+  \label{tab:reqfonte2}
+  \end{center}
+\end{table}
+     
+F01 = deriva dal capitolato    F02 = deriva dalla ditta ''WebShape''
 
 \newpage
 
