MU:screen aggiornati

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -387,7 +387,8 @@ Per chiudere Tomcat, posizionarsi via shell sulla cartella di installazione e in
 \textit{cd bin}\\
 \textit{./catalina.sh stop}\\
 \\
-
+\newpage
+%%%%%%%%%%%Descrizione Funzionale%%%%%%%%%%%%%%%%%%%%%%%
 \subsezione{Descrizione funzionale - Lato client}
 \subsubsezione{Il Menu}
 Il programma dispone di un menu a tendina nella parte alta dell'interfaccia grafica.
@@ -395,7 +396,7 @@ Il programma dispone di un menu a tendina nella parte alta dell'interfaccia graf
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.4]{images/menu.png}
-\caption{menu a tendina}
+\caption{Menu a tendina}
 \end{figure}
  
  
