aggiunta modifica misure MU

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -611,6 +611,23 @@ Qui \`e stata selezionata la funzione di cambiamento del numero di lati per il d
  
 \vspace{100pt}
 Qui \`e stata selezionata la funzione di clonazione di un oggetto presente sul piano di disegno e precedentemente selezionato. Tale funzione permette di fare una copia di tutti gli oggetti disegnabili mediante un semplice click sul pulsante apposito \textit{Clona} posto in basso a sinistra. \\
+
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/dim_pos.png}
+\caption{cambio coordinate e dimensioni manuale - PRIMA}
+\end{figure}
+ 
+\begin{figure}[!ht]
+\centering
+\includegraphics[scale=0.4]{images/dim_pos_dopo.png}
+\caption{cambio coordinate e dimensioni manuale - DOPO}
+\end{figure}
+ 
+ 
+\vspace{100pt}
+Qui \`e stata selezionata la funzione di cambiamento delle coordinate spaziali all'interno dell'area di disegno, allo stesso tempo \`e stata cambiata anche la dimensione di altezza e larghezza della figura. tutte le modifiche suddette sono effettuabili sulla finestra \textit{Modifica Attributi} modificando i parametri appositi rispettivamente X e Y per la posizione sul piano di disegno, H e L per altezza e larghezza dell'oggetto.
+\newpage
  
 %\begin{figure}[!ht]
 %\centering
