lievi mod e iconcine

--- a/doc/ManualeUtente/ManualeUtente.tex
+++ b/doc/ManualeUtente/ManualeUtente.tex
@@ -409,9 +409,9 @@ Infine la sezione \textit{Guida} contiene il link al manuale consultabile in lin
 \newpage
  
 \subsubsezione{La Toolbar}
-Le funzioni di disegno del programma sono accessibili attraverso i bottoni presenti nel lato sinistro dell'interfaccia grafica. Cliccando su un pulsante si attiva la funzione desiderata. Il puntatore del mouse cambia a seconda della funzione di disegno scelta, nei browser che lo supportano.
+Le funzioni di disegno del programma sono accessibili attraverso i bottoni presenti nel lato sinistro dell'interfaccia grafica. Cliccando su un pulsante si attiva la funzione desiderata. Il puntatore del mouse cambia a seconda della funzione di disegno scelta, nei browser che lo supportano. \\
  
- 
+\textbf{Selezione}:\\
 \begin{figure}[!ht]
 \centering
 \includegraphics[scale=0.5]{images/selezione.png}
@@ -438,7 +438,7 @@ In questo caso \`e stata selezionata la funzione per il disegno di un'\textit{el
 \end{figure}
  
  
-\vspace{300pt}
+\vspace{100pt}
 Qui \`e stato disegnato un \textit{poligono regolare}. L'unica differenza rispetto ad ellissi e rettangoli consiste nella composizione della finestra di propriet\`a, alla quale si aggiunge una casella che permette di modificare il numero di lati del poligono da disegnare o disegnato, inserendo il valore desiderato a fianco dell'etichettta \textit{N. di lati} e confermando tale scelta cliccando sul pulsante \textit{Cambia}.
  
  
