--- a/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
+++ b/doc/AnalisiRequisiti/AnalisiDeiRequisiti.tex
@@ -146,7 +146,7 @@ Tale studio \`e mirato alla comprensione dei bisogni espressi nel capitolato e a
 									%& \\
 									
 			\hline
-			\multirow{1}{*}{RPP-RQ} & Carollo Mirko\\
+			\multirow{1}{*}{RPP-RQ} & Rizzo Maurizio\\
 									%& \\
 			\hline
 			%%%%%%%%%%% FINE PARTE DA MODIFICARE %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
